--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
         </div>
     </header>
     <div id="aboutsb" class="intro">
-        <div class="image"><img src="./Images/profile.jpeg.JPG" alt="" width="250px" height="250px"></div>
+        <div class="image">
+            <img src="./Images/profile.jpeg.JPG" alt="" width="200px" height="250px" class="mobile1">
+            <img src="./Images/profile.jpeg.JPG" alt="" width="300px" height="350px" class="desktop1">
+        </div>
         <div class="about">
             <h3>About Me</h3>
             <p><span> Hello!! My name is IRSHAD ALI,</span> lives in Bangalore. Basically I have done B.E in Civil Engineering but my interest in coding made me to learn coding.</p>
             <p>I like to do every work with complete passion and dedication. I am eager to learn new things and also to share my knowledge. I am good at both as an individual and as team player.</p>
         </div>
     </div>
-    <div class="middle">
     <div id="skillssb" class="skills">
         <h3>My Skills</h3>
         <li>
@@ -91,7 +93,6 @@
             </div>
         </div>
     </div>
-</div>
     <div id="hobbiessb" class="hobbies">
         <h3>My Hobbies</h3>
         <ul>
