--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         <div class="row">
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="./Images/tutorial-page.jpeg.png" class="card-img-top" alt="..." width="150px" height="150px">
+                    <img src="./Images/tutorial-page.jpeg.png" class="card-img-top mobile1" alt="..." width="150px" height="150px">
+                    <img src="./Images/tutorial-page.jpeg.png" class="card-img-top desktop1" alt="..." width="350px" height="250px">
                     <div class="card-body">
                       <h5 class="card-title">Tutoial Page</h5>
                       <a href="https://sad-banach-51a06b.netlify.app/" class="btn btn-primary">See Project</a>
@@ -75,7 +76,8 @@
             </div>
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="./Images/Intermediate.jpeg.png" class="card-img-top" alt="..." width="150px" height="150px">
+                    <img src="./Images/Intermediate.jpeg.png" class="card-img-top mobile1" alt="..." width="150px" height="150px">
+                    <img src="./Images/Intermediate.jpeg.png" class="card-img-top desktop1" alt="..." width="350px" height="250px">
                     <div class="card-body">
                       <h5 class="card-title">Intermediate</h5>
                       <a href="https://elegant-sammet-a0c799.netlify.app/" class="btn btn-primary">See Project</a>
@@ -84,7 +86,8 @@
             </div>
             <div class="col-4">
                 <div class="card" style="width: 100%;">
-                    <img src="./Images/tutorial.jpeg.png" class="card-img-top" alt="..." width="150px" height="150px">
+                    <img src="./Images/tutorial.jpeg.png" class="card-img-top mobile1" alt="..." width="150px" height="150px">
+                    <img src="./Images/tutorial.jpeg.png" class="card-img-top desktop1" alt="..." width="350px" height="250px">
                     <div class="card-body">
                       <h5 class="card-title">Tutoial</h5>
                       <a href="https://quizzical-wright-256303.netlify.app" class="btn btn-primary">See Project</a>
@@ -108,7 +111,7 @@
     </div>
     <footer>
         <div id="contact">
-            <h3>Contact Me</h3>
+            <h3>Contact Me :</h3>
             <ul>
                 <li><a href="https://twitter.com/explore"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
                 </li>
@@ -119,7 +122,7 @@
                 <li><a href="https://myaccount.google.com/personal-info?gar=1"><i class="fa fa-envelope" aria-hidden="true"></a></i>
                 </li>
             </ul>
-            <div class="phone"><i class="fa fa-phone-square" aria-hidden="true"></i>9686313344</div>
+            <div class="phone"><i class="fa fa-phone-square" aria-hidden="true"></i>          9686313344</div>
         </div>
         <div class="last">
             <i class="fa fa-copyright" aria-hidden="true"></i>2020-21 All rights reserved
