--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
         </nav>
-        <div class="desktop">
+        <div id="home" class="desktop">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#aboutsb">About</a></li>
